# aifam

./: .gitignore  README.md  project.yml
AIFam/: AIFam.entitlements  AIFamApp.swift  ContentView.swift  Info.plist
AIFam.xcodeproj/: project.pbxproj
AIFam/Intents/: AIFamShortcuts.swift  DayOverviewIntent.swift  MorningBriefingIntent.swift
AIFam/Models/: BinderCategory.swift  BinderItem.swift  Briefing.swift  ChatMessage.swift  ExtractedEntities.swift  Insight.swift  SharedBriefing.swift  TonePreset.swift  UserProfile.swift
AIFam/Preview Content/: PreviewData.swift
AIFam/Services/: APIClient.swift  BriefingGenerator.swift  CalendarIngestionService.swift  ContactsIngestionService.swift  DataSyncCoordinator.swift  EntityExtractionService.swift  HealthIngestionService.swift  InsightEngine.swift  LocationService.swift  NLEntityExtractor.swift  NotificationService.swift  PermissionManager.swift  RemindersIngestionService.swift  SecretaryService.swift  SharedDataManager.swift
AIFam/Theme/: Colors.swift  Typography.swift
AIFam/Views/: AppShell.swift
AIFamWidget/: AIFamWidget.entitlements  AIFamWidget.swift  AIFamWidgetBundle.swift  BriefingTimelineProvider.swift  BriefingWidgetView.swift  SharedBriefing.swift  SharedDataManager.swift
Tabby.xcodeproj/: project.pbxproj
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: chat.py  health.py
backend/app/services/: secretary.py
backend/tests/: test_chat.py  test_health.py
docs/: app-store-publishing-guide.md
(+20 files in other folders)
